// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Miscellaneous Components Navigation Bar 1`] = `
<div>
  <nav
    className="bg-navBlue navbar navbar-expand-sm navbar-dark"
  >
    <div
      className="container"
    >
      <a
        className="navbar-brand"
        href="/"
      >
        TIMA 
        <span
          className="text-muted"
        >
          | 
          Home
        </span>
      </a>
      <button
        aria-label="Toggle navigation"
        className="navbar-toggler"
        onClick={[Function]}
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        className="collapse navbar-collapse"
        style={Object {}}
      >
        <ul
          className="mr-auto navbar-nav"
        >
          <li
            className="nav-item"
          >
            <a
              className="nav-link"
              href="/"
              onClick={[Function]}
            >
              <i
                className="fas fa-home"
              />
               Home
            </a>
          </li>
        </ul>
        <ul
          className="ml-auto navbar-nav"
        >
          <li
            className="nav-item"
          >
            <a
              className="nav-link"
              href="/Login"
              onClick={[Function]}
            >
              <i
                className="fas fa-sign-in-alt"
              />
               Log In
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link"
              href="/Register"
              onClick={[Function]}
            >
              <i
                className="fas fa-user-plus"
              />
               Register
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Miscellaneous Components News 1`] = `
<div
  className="core-cont bg-lightgrey mt-4"
>
  <h2>
    Loading...
  </h2>
  <hr
    className="bg-black"
  />
  <p>
    We are attempting to load news items from the database, if this problem persists, please contact a system administrator.
  </p>
</div>
`;

exports[`Miscellaneous Components Schedule 1`] = `
<div
  className="core-cont bg-lightgrey mt-4"
>
  <h2>
    Loading...
  </h2>
  <hr
    className="bg-black"
  />
  <p>
    We are attempting to load events from the database, if this problem persists, please contact a system administrator.
  </p>
</div>
`;
